# machine_learning

./: .gitmodules  README.md
edge-impulse/: CMakeLists.txt
edge-impulse/esp32-firmware/: CMakeLists.txt
edge-impulse/esp32-firmware/src/: main.cpp
edge-impulse/firmware/: CMakeLists.txt
edge-impulse/firmware/src/: main.c
templates/esp32/esp-idf-from-tensorflow-makefile/: sdkconfig.old
templates/esp32/esp-idf-from-tensorflow-makefile/main/: main.cc
templates/esp32/esp-idf-generic-cmake/components/tfmicro/: CMakeLists.txt
templates/esp32/esp-idf-generic-cmake/main/: main.cc
